--- a/Index.html
+++ b/Index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">      
   </head>
   <body>
-
+    <div class="container">
     <form name="kalkulator">
       <div class="kalimat">KALKULATOR SEDERHANA</div>
       <table align="center">
@@ -91,6 +91,7 @@
       </table>
 
     </form>
+  </div>
     <script src="./bootstrap-5.2.0/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
   </body>
